# Qt-Advanced-Docking-System

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  ads.sln  meson.build  pyproject.toml  setup.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake.yml  linux-builds.yml  windows-cmake.yml
PyQtAds/: rc.py
demo/: AdvancedDockingSystemDemo.vcxproj  AdvancedDockingSystemDemo.vcxproj.filters  CMakeLists.txt  ImageViewer.cpp  MainWindow.cpp  MainWindow.h  StatusDialog.cpp  demo.py  main.cpp
demo/res/: visual_studio_light.css
doc/: user-guide.md
example/: example.py
examples/: CMakeLists.txt  examples.pro
examples/autohide/: CMakeLists.txt  autohide.pro  autohide.qrc  mainwindow.cpp
examples/autohide/res/: autohide.css
examples/autohidedragndrop/: CMakeLists.txt  mainwindow.cpp
examples/centralWidget/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
examples/centralwidget/: CMakeLists.txt  mainwindow.cpp
examples/configflags/: CMakeLists.txt
examples/deleteonclose/: CMakeLists.txt  main.cpp  main.py
examples/dockindock/: CMakeLists.txt  dockindock.cpp  dockindock.py  dockindockmanager.cpp  dockindockmanager.py  main.py  perspectives.cpp  perspectives.py
examples/emptydockarea/: CMakeLists.txt  main.py  mainwindow.cpp
examples/hideshow/: CMakeLists.txt
examples/openGL/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  fbitem.cpp  fbitem.h  glwidget.cpp  glwidget.h  glwindow.cpp  glwindow.h  logo.h  main.cpp  mainwindow.cpp  mainwindow.h  openGL.pro  openGL.qrc  test.qml  wobble.frag
examples/sidebar/: CMakeLists.txt  MainWindow.cpp
examples/simple/: CMakeLists.txt  MainWindow.cpp
sip/: AutoHideTab.sip  DockAreaWidget.sip  DockContainerWidget.sip  DockWidget.sip  FloatingDockContainer.sip  ads.sip  ads_globals.sip
src/: AdvancedDockingSystem.vcxproj  AdvancedDockingSystem.vcxproj.filters  AutoHideDockContainer.cpp  AutoHideDockContainer.h  AutoHideSideBar.cpp  AutoHideSideBar.h  AutoHideTab.cpp  AutoHideTab.h  CMakeLists.txt  DockAreaTabBar.cpp  DockAreaTabBar.h  DockAreaTitleBar.cpp  DockAreaTitleBar.h  DockAreaWidget.cpp  DockAreaWidget.h  DockComponentsFactory.cpp  DockComponentsFactory.h  DockContainerWidget.cpp  DockContainerWidget.h  DockFocusController.cpp  DockFocusController.h  DockManager.cpp  DockManager.h  DockOverlay.cpp  DockOverlay.h  DockSplitter.cpp  DockSplitter.h  DockWidget.cpp  DockWidget.h  DockWidgetTab.cpp  DockWidgetTab.h  DockWidgetTitleBar.h  ElidingLabel.cpp  FloatingDockContainer.cpp  FloatingDockContainer.h  FloatingDragPreview.cpp  FloatingDragPreview.h  IconProvider.cpp  IconProvider.h  ResizeHandle.cpp  (+8 more)
src/customwidgets/window/: macos_helper.h  macos_helper.mm  styled_window.cpp  styled_window.h  utils.h  widget_event_helper.cpp  widget_event_helper.h  win_utils.h
src/linux/: FloatingWidgetTitleBar.cpp  FloatingWidgetTitleBar.h
src/stylesheets/: default.css  default_linux.css  focus_highlighting.css  focus_highlighting_dark.css  focus_highlighting_linux.css  focus_highlighting_linux_dark.css
tests/: CMakeLists.txt  QuadrantHitTestTest.cpp
